--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,23 @@
 beautifulsoup4==4.12.3
 certifi==2025.1.31
 charset-normalizer==3.4.1
+contourpy==1.3.1
+cycler==0.12.1
+fonttools==4.55.8
 frozendict==2.4.6
 html5lib==1.1
 idna==3.10
+kiwisolver==1.4.8
 lxml==5.3.0
+matplotlib==3.10.0
 multitasking==0.0.11
 numpy==2.2.2
+packaging==24.2
 pandas==2.2.3
 peewee==3.17.8
+pillow==11.1.0
 platformdirs==4.3.6
+pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 pytz==2025.1
 requests==2.32.3
